# ca_abc

./: .gitignore  1d_abc.py  1d_abc_adaptive.py  1d_testing.py  LICENSE  README.md  abc_minima_6.xyz  analysis.py  analyze_df.ipynb  analyze_json.ipynb  basin_hopping.py  best_agent.pth  bias.py  ca_abc.py  ca_abc_mb_sweep.py  cluster_perf_test.py  cluster_perf_test.sh  cluster_perf_test.txt  data.txt  descent_tests.py  dimer.py  directions.txt  dynamic_deposition_2d.py  enhanced_1d.py  full_smart_abc.py  general_abc.py  generate_diverse_potentials.py  hyperparameter_sweep.py  initial_config_lj38.xyz  initial_config_lj5.xyz  inversion_cost_test.py  job_template.sh  langevin_abc.py  lennard_jones.py  lj38.py  lj_neb.py  lj_testing.py  mb_sweep.out  merge_results.py  mins_13.xyz  (+43 more)
.git-rewrite/: backup-refs  commit  index  message  parse  raw-refs  revs
Deprecated/: 1d_abc.py  RLABC.rtf  bfgs_abc_2d.py  dynamic_deposition_2d.py  dynamic_timestep.py  improved_1d_abc.py  minimalist.ipynb  pyscf.py  rl_abc.py  rl_abc_claude.py  smart_perturb_abc.py  standard_abc.py  traditional_abc.py
abc_data_dumps/: abc_dump_iter_0.pkl  abc_dump_iter_500.pkl
abc_mb_results/: run_100.json  run_1001.json  run_1002.json  run_1003.json  run_1004.json  run_1005.json  run_1006.json  run_1007.json  run_1008.json  run_1009.json  run_101.json  run_1010.json  run_1011.json  run_102.json  run_1020.json  run_1021.json  run_1022.json  run_1023.json  run_1024.json  run_1025.json  run_1026.json  run_1027.json  run_1028.json  run_1029.json  run_103.json  run_1030.json  run_1031.json  run_1032.json  (+1313 more)
(+17436 files in other folders)
